// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheet /> & <Dropdown /> with <AutoComplete /> it should accept data-analytics attributes 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  position: relative;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c4.c4.c4.c4.c4 {
  margin-bottom: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c14.c14.c14.c14.c14 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c21.c21.c21.c21.c21 {
  margin-left: 0px;
}

.c22.c22.c22.c22.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c8.c8.c8.c8.c8 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20.c20.c20.c20.c20 {
  display: none;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c15.c15.c15.c15.c15::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c11.c11.c11.c11.c11 {
  -webkit-animation: none;
  animation: none;
  max-height: 36px;
}

.c13.c13.c13.c13.c13 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c13.c13.c13.c13.c13::-webkit-scrollbar {
  display: none;
}

.c7.c7.c7.c7.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="autocomplete"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <label
                data-blade-component="form-label"
                for="dropdown-123"
                id="dropdown-123-label"
                style="width: auto; flex-shrink: 0; margin-right: 0px;"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <div
                    class="c5"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c6"
                      data-blade-component="text"
                    >
                      Fruits
                    </p>
                    <div
                      class="c7"
                      data-blade-component="visually-hidden"
                    >
                      <p
                        class="c8"
                        data-blade-component="text"
                      />
                    </div>
                  </div>
                </div>
              </label>
            </div>
            <div
              class=" c9"
              data-blade-component="base-box"
            >
              <div
                class=" c10 c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12 c13 tags-slot"
                  data-blade-component="base-box"
                >
                  <div
                    class="c14"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-controls="dropdown-123-actionlist"
                      aria-describedby=""
                      aria-disabled="false"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-invalid="false"
                      aria-required="false"
                      autocomplete="off"
                      class="c15"
                      data-analytics-name="dropdown-fruits"
                      data-blade-component="styled-base-input"
                      id="dropdown-123"
                      placeholder="Select Option"
                      role="combobox"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c16"
                  data-blade-component="base-box"
                >
                  <div
                    class="c16"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c17"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c18"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="c20"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c21"
            data-blade-component="base-box"
          >
            <div
              class="c22"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BottomSheet /> & <Dropdown /> with <AutoComplete /> should render BottomSheet and make it visible on click 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  position: relative;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c5.c5.c5.c5.c5 {
  margin-bottom: 4px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c14.c14.c14.c14.c14 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c22.c22.c22.c22.c22 {
  margin-left: 0px;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c27.c27.c27.c27.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c29.c29.c29.c29.c29 {
  overflow: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c30.c30.c30.c30.c30 {
  padding-right: 16px;
  padding-left: 16px;
  margin-bottom: 16px;
  margin-top: 16px;
  touch-action: none;
}

.c31.c31.c31.c31.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c32.c32.c32.c32.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 16px;
  margin-right: auto;
}

.c33.c33.c33.c33.c33 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c34.c34.c34.c34.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c35.c35.c35.c35.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 28px;
}

.c37.c37.c37.c37.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c38.c38.c38.c38.c38 {
  width: 100%;
}

.c43.c43.c43.c43.c43 {
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c45.c45.c45.c45.c45 {
  overflow: auto;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c49.c49.c49.c49.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
}

.c50.c50.c50.c50.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 20px;
}

.c51.c51.c51.c51.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 8px;
  padding-left: 0px;
}

.c52.c52.c52.c52.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
}

.c54.c54.c54.c54.c54 {
  margin-left: auto;
}

.c55.c55.c55.c55.c55 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  z-index: 2;
  margin-top: auto;
  width: 100%;
  background-color: hsla(0,0%,100%,1);
  touch-action: none;
}

.c56.c56.c56.c56.c56 {
  padding: 16px;
}

.c59.c59.c59.c59.c59 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c46.c46.c46.c46.c46 {
  overflow: auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 8px;
  padding-left: 8px;
}

.c41.c41.c41.c41.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c24.c24.c24.c24.c24 {
  position: fixed;
  z-index: 100;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: hsla(0,0%,0%,0.56);
  opacity: 1;
}

.c57.c57.c57.c57.c57 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c57.c57.c57.c57.c57:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c57.c57.c57.c57.c57:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c57.c57.c57.c57.c57:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c57.c57.c57.c57.c57 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c58.c58.c58.c58.c58 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c8.c8.c8.c8.c8 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c53.c53.c53.c53.c53 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-all;
}

.c61.c61.c61.c61.c61 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20.c20.c20.c20.c20 {
  display: none;
}

.c60.c60.c60.c60.c60 {
  opacity: 1;
}

.c44.c44.c44.c44.c44 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c36.c36.c36.c36.c36 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c36.c36.c36.c36.c36:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c36.c36.c36.c36.c36:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c36.c36.c36.c36.c36:active {
  color: hsla(211,26%,34%,1);
}

.c42.c42.c42.c42.c42 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 12px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c42.c42.c42.c42.c42::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c42.c42.c42.c42.c42::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c42.c42.c42.c42.c42:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c42.c42.c42.c42.c42::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c42.c42.c42.c42.c42:focus {
  outline: none;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c15.c15.c15.c15.c15::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c40.c40.c40.c40.c40 {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
}

.c40.c40.c40.c40.c40:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c40.c40.c40.c40.c40:focus-within {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
}

.c11.c11.c11.c11.c11 {
  -webkit-animation: none;
  animation: none;
  max-height: 36px;
}

.c13.c13.c13.c13.c13 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c13.c13.c13.c13.c13::-webkit-scrollbar {
  display: none;
}

.c2.c2.c2.c2.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c39.c39.c39.c39.c39 {
  border-radius: 4px;
  width: 100%;
}

.c39.c39.c39.c39.c39:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c47.c47.c47.c47.c47 {
  overflow-y: auto;
}

.c47.c47.c47.c47.c47 [role=group]:last-child > [role=separator]:last-child {
  display: none;
}

.c48.c48.c48.c48.c48 {
  border-width: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  background-color: transparent;
  border-radius: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: 100%;
  padding: 4px;
}

.c48.c48.c48.c48.c48:hover:not([aria-disabled=true]),
.c48.c48.c48.c48.c48[aria-expanded="true"] {
  background-color: hsla(211,20%,52%,0.12);
}

.c48.c48.c48.c48.c48:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c48.c48.c48.c48.c48[aria-selected=true] {
  background-color: hsla(227,100%,59%,0.09);
}

.c48.c48.c48.c48.c48[aria-selected=true]:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c25.c25.c25.c25.c25 {
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  pointer-events: all;
  -webkit-transition-property: opacity;
  transition-property: opacity;
}

.c28.c28.c28.c28.c28 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-top: 12px;
  margin-bottom: 4px;
  touch-action: none;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

.c28.c28.c28.c28.c28:after {
  margin: auto;
  content: '';
  width: 56px;
  height: 4px;
  background-color: hsla(211,20%,52%,0.06);
  border-radius: 16px;
}

.c26.c26.c26.c26.c26 {
  background: hsla(0,0%,100%,1);
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  border-color: hsla(211,20%,52%,0.18);
  box-shadow: 0px -24px 48px -12px hsla(217,56%,17%,0.18);
  opacity: 0;
  pointer-events: none;
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(.15,0,.24,.97);
  transition-timing-function: cubic-bezier(.15,0,.24,.97);
  will-change: transform,opacity,height;
  -webkit-transition-property: -webkit-transform,opacity,height;
  -webkit-transition-property: transform,opacity,height;
  transition-property: transform,opacity,height;
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  top: 768px;
  background-color: hsla(0,0%,100%,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  touch-action: none;
  overflow: hidden;
}

@media screen and (min-width:768px) {
  .c30.c30.c30.c30.c30 {
    padding-right: 20px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
  }
}

@media screen and (min-width:320px) {
  .c43.c43.c43.c43.c43 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c43.c43.c43.c43.c43 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c43.c43.c43.c43.c43 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c43.c43.c43.c43.c43 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c43.c43.c43.c43.c43 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c56.c56.c56.c56.c56 {
    padding: 20px;
  }
}

@media screen and (min-width:768px) {
  .c48.c48.c48.c48.c48 {
    padding: 8px;
  }
}

@media screen and (min-width:768px) {

}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="visually-hidden"
        >
          <input
            aria-hidden="true"
            tabindex="-1"
            value=""
          />
        </div>
        <div
          class=""
          data-blade-component="select-input"
          data-testid="select"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <label
                data-blade-component="form-label"
                for="dropdown-123"
                id="dropdown-123-label"
                style="width: auto; flex-shrink: 0; margin-right: 0px;"
              >
                <div
                  class="c5"
                  data-blade-component="base-box"
                >
                  <div
                    class="c6"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c7"
                      data-blade-component="text"
                    >
                      Fruits
                    </p>
                    <div
                      class="c2"
                      data-blade-component="visually-hidden"
                    >
                      <p
                        class="c8"
                        data-blade-component="text"
                      />
                    </div>
                  </div>
                </div>
              </label>
            </div>
            <div
              class=" c9"
              data-blade-component="base-box"
            >
              <div
                class=" c10 c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12 c13 tags-slot"
                  data-blade-component="base-box"
                >
                  <div
                    class="c14"
                    data-blade-component="base-box"
                  >
                    <button
                      aria-activedescendant="dropdown-123-0"
                      aria-controls="dropdown-123-actionlist"
                      aria-describedby=""
                      aria-disabled="false"
                      aria-expanded="true"
                      aria-haspopup="listbox"
                      aria-invalid="false"
                      aria-required="false"
                      autocomplete="off"
                      class="c15"
                      data-blade-component="styled-base-input"
                      id="dropdown-123"
                      placeholder="Select Option"
                      role="combobox"
                      type="button"
                      value=""
                    >
                      <p
                        class="c16"
                        data-blade-component="text"
                      >
                        Select Option
                      </p>
                    </button>
                  </div>
                </div>
                <div
                  class="c17"
                  data-blade-component="base-box"
                >
                  <div
                    class="c17"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c18"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c19"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="c20"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="c21"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c22"
            data-blade-component="base-box"
          >
            <div
              class="c23"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
      <div
        class="c24 c25"
        data-blade-component="base-box"
        data-testid="bottomsheet-backdrop"
        opacity="1"
      />
      <div
        aria-modal="true"
        class="c26"
        data-blade-component="bottom-sheet"
        data-testid="bottomsheet-surface"
        role="dialog"
        style="opacity: 1; pointer-events: all; height: 652.8px; bottom: 0px; z-index: 100;"
      >
        <div
          class="c27"
          data-blade-component="base-box"
        >
          <div
            class="c28"
            data-blade-component="BottomSheetGrabHandle"
          />
          <div
            class="c29"
            data-blade-component="bottom-sheet-header"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <div
                class="c30"
                data-blade-component="base-box"
              >
                <div
                  class="c31"
                  data-blade-component="base-box"
                >
                  <div
                    class="c32"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c33"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c34"
                        data-blade-component="base-box"
                      />
                    </div>
                  </div>
                  <div
                    class="c35"
                    data-blade-component="box"
                  >
                    <button
                      aria-label="Close"
                      class="c36"
                      data-blade-component="icon-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-blade-component="icon"
                        fill="none"
                        height="20px"
                        viewBox="0 0 24 24"
                        width="20px"
                      >
                        <path
                          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                          data-blade-component="svg-path"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="c37"
                  data-blade-component="base-box"
                >
                  <div
                    class="c38"
                    data-blade-component="box"
                  >
                    <div
                      class="c1"
                      data-blade-component="base-box"
                    >
                      <div
                        class=""
                        data-blade-component="autocomplete"
                        data-testid="fruits-autocomplete"
                      >
                        <div
                          class="c3"
                          data-blade-component="base-box"
                        >
                          <div
                            class="c4"
                            data-blade-component="base-box"
                          >
                            <label
                              data-blade-component="form-label"
                              for="dropdown-123"
                              id="dropdown-123-label"
                              style="width: auto; flex-shrink: 0; margin-right: 0px;"
                            >
                              <div
                                class="c5"
                                data-blade-component="base-box"
                              >
                                <div
                                  class="c6"
                                  data-blade-component="base-box"
                                >
                                  <p
                                    class="c7"
                                    data-blade-component="text"
                                  >
                                    Fruits
                                  </p>
                                  <div
                                    class="c2"
                                    data-blade-component="visually-hidden"
                                  >
                                    <p
                                      class="c8"
                                      data-blade-component="text"
                                    />
                                  </div>
                                </div>
                              </div>
                            </label>
                          </div>
                          <div
                            class=" c39"
                            data-blade-component="base-box"
                          >
                            <div
                              class=" c40 c11"
                              data-blade-component="base-box"
                            >
                              <div
                                class="c41 c13 tags-slot"
                                data-blade-component="base-box"
                              >
                                <div
                                  class="c14"
                                  data-blade-component="base-box"
                                >
                                  <input
                                    aria-activedescendant="dropdown-123-0"
                                    aria-controls="dropdown-123-actionlist"
                                    aria-describedby=""
                                    aria-disabled="false"
                                    aria-expanded="true"
                                    aria-haspopup="listbox"
                                    aria-invalid="false"
                                    aria-required="false"
                                    autocomplete="off"
                                    autofocus=""
                                    class="c42"
                                    data-blade-component="styled-base-input"
                                    id="dropdown-123"
                                    placeholder="Select Option"
                                    role="combobox"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="c22"
                          data-blade-component="base-box"
                        >
                          <div
                            class="c23"
                            data-blade-component="base-box"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c43 c44"
                data-blade-component="divider"
                role="separator"
              />
            </div>
          </div>
          <div
            class="c45"
            data-blade-component="bottom-sheet-body"
            data-testid="bottomsheet-body"
            style="user-select: auto;"
          >
            <div
              class="c46"
              data-blade-component="base-box"
            >
              <div
                class=" c47"
                data-blade-component="base-box"
              >
                <button
                  aria-selected="false"
                  class=" c48 active-focus"
                  data-blade-component="action-list-item"
                  data-index="0"
                  data-value="apple"
                  id="dropdown-123-0"
                  role="option"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c49"
                    data-blade-component="box"
                  >
                    <div
                      class="c50"
                      data-blade-component="box"
                    />
                    <div
                      class="c51"
                      data-blade-component="box"
                    >
                      <div
                        class="c52"
                        data-blade-component="box"
                      >
                        <p
                          class="c53"
                          data-blade-component="text"
                        >
                          Apple
                        </p>
                      </div>
                      <div
                        class=""
                        data-blade-component="box"
                      />
                    </div>
                    <div
                      class="c54"
                      data-blade-component="box"
                    />
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class=" c48"
                  data-blade-component="action-list-item"
                  data-index="1"
                  data-value="mango"
                  id="dropdown-123-1"
                  role="option"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c49"
                    data-blade-component="box"
                  >
                    <div
                      class="c50"
                      data-blade-component="box"
                    />
                    <div
                      class="c51"
                      data-blade-component="box"
                    >
                      <div
                        class="c52"
                        data-blade-component="box"
                      >
                        <p
                          class="c53"
                          data-blade-component="text"
                        >
                          Mango
                        </p>
                      </div>
                      <div
                        class=""
                        data-blade-component="box"
                      />
                    </div>
                    <div
                      class="c54"
                      data-blade-component="box"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="c55"
            data-blade-component="bottom-sheet-footer"
          >
            <div
              class="c43 c44"
              data-blade-component="divider"
              role="separator"
            />
            <div
              class="c56"
              data-blade-component="base-box"
            >
              <div
                class=""
                data-blade-component="box"
              >
                <button
                  class="c57"
                  data-blade-component="button"
                  role="button"
                  type="button"
                >
                  <div
                    class=" c58"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c59 c60"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c61"
                        data-blade-component="base-text"
                      >
                        Apply
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> with <AutoComplete /> should render autocomplete with large size 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  position: relative;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c4.c4.c4.c4.c4 {
  margin-bottom: 8px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 48px;
}

.c14.c14.c14.c14.c14 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c21.c21.c21.c21.c21 {
  margin-left: 0px;
}

.c22.c22.c22.c22.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c8.c8.c8.c8.c8 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20.c20.c20.c20.c20 {
  display: none;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 48px;
  min-height: 48px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c15.c15.c15.c15.c15::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c11.c11.c11.c11.c11 {
  -webkit-animation: none;
  animation: none;
  max-height: 48px;
}

.c13.c13.c13.c13.c13 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c13.c13.c13.c13.c13::-webkit-scrollbar {
  display: none;
}

.c7.c7.c7.c7.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

@media screen and (min-width:768px) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:768px) {

}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="autocomplete"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <label
                data-blade-component="form-label"
                for="dropdown-123"
                id="dropdown-123-label"
                style="width: auto; flex-shrink: 0; margin-right: 0px;"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <div
                    class="c5"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c6"
                      data-blade-component="text"
                    >
                      Fruits
                    </p>
                    <div
                      class="c7"
                      data-blade-component="visually-hidden"
                    >
                      <p
                        class="c8"
                        data-blade-component="text"
                      />
                    </div>
                  </div>
                </div>
              </label>
            </div>
            <div
              class=" c9"
              data-blade-component="base-box"
            >
              <div
                class=" c10 c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12 c13 tags-slot"
                  data-blade-component="base-box"
                >
                  <div
                    class="c14"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-controls="dropdown-123-actionlist"
                      aria-describedby=""
                      aria-disabled="false"
                      aria-expanded="false"
                      aria-haspopup="dialog"
                      aria-invalid="false"
                      aria-required="false"
                      autocomplete="off"
                      class="c15"
                      data-blade-component="styled-base-input"
                      id="dropdown-123"
                      placeholder="Select Option"
                      role="combobox"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c16"
                  data-blade-component="base-box"
                >
                  <div
                    class="c16"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c17"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c18"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="c20"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c21"
            data-blade-component="base-box"
          >
            <div
              class="c22"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> with <AutoComplete /> should render dropdown and make it visible on click 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  position: relative;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  margin-top: 0px;
}

.c4.c4.c4.c4.c4 {
  margin-bottom: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c14.c14.c14.c14.c14 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c21.c21.c21.c21.c21 {
  margin-left: 0px;
}

.c22.c22.c22.c22.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c8.c8.c8.c8.c8 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19.c19.c19.c19.c19 {
  display: none;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c15.c15.c15.c15.c15::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(227,100%,59%,1) 0px 0px 0px 1.5px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-easing: cubic-bezier(0.5,0,0,1);
  transition-easing: cubic-bezier(0.5,0,0,1);
}

.c11.c11.c11.c11.c11 {
  -webkit-animation: none;
  animation: none;
  max-height: 36px;
}

.c13.c13.c13.c13.c13 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c13.c13.c13.c13.c13::-webkit-scrollbar {
  display: none;
}

.c7.c7.c7.c7.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 640ms;
  transition-duration: 640ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

@media screen and (min-width:768px) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:768px) {

}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="autocomplete"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class="c3"
              data-blade-component="base-box"
            >
              <label
                data-blade-component="form-label"
                for="dropdown-123"
                id="dropdown-123-label"
                style="width: auto; flex-shrink: 0; margin-right: 0px;"
              >
                <div
                  class="c4"
                  data-blade-component="base-box"
                >
                  <div
                    class="c5"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c6"
                      data-blade-component="text"
                    >
                      Fruits
                    </p>
                    <div
                      class="c7"
                      data-blade-component="visually-hidden"
                    >
                      <p
                        class="c8"
                        data-blade-component="text"
                      />
                    </div>
                  </div>
                </div>
              </label>
            </div>
            <div
              class=" c9"
              data-blade-component="base-box"
            >
              <div
                class=" c10 c11"
                data-blade-component="base-box"
              >
                <div
                  class="c12 c13 tags-slot"
                  data-blade-component="base-box"
                >
                  <div
                    class="c14"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-activedescendant="dropdown-123-0"
                      aria-controls="dropdown-123-actionlist"
                      aria-describedby=""
                      aria-disabled="false"
                      aria-expanded="true"
                      aria-haspopup="dialog"
                      aria-invalid="false"
                      aria-required="false"
                      autocomplete="off"
                      class="c15"
                      data-blade-component="styled-base-input"
                      id="dropdown-123"
                      placeholder="Select Option"
                      role="combobox"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c16"
                  data-blade-component="base-box"
                >
                  <div
                    class="c16"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c17"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c18"
                        data-blade-component="base-box"
                      >
                        <svg
                          aria-hidden="true"
                          class="c19"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="c20"
                          data-blade-component="icon"
                          fill="none"
                          height="16px"
                          viewBox="0 0 24 24"
                          width="16px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                            data-blade-component="svg-path"
                            fill="hsla(211, 22%, 56%, 1)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c21"
            data-blade-component="base-box"
          >
            <div
              class="c22"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
